# milkv_duo_little_core_rust

./: .gitignore  README.md  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
firmware/: Cargo.toml  memory.x  run_debug_server.sh  run_on_target.sh
firmware/.cargo/: config.toml
firmware/src/: irq.rs  main.rs  ressource_table.rs  timer.rs  uart.rs
pac/: .gitignore  Cargo.toml  SG2000.svd  build-pac.sh
